--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ data/bus_own_df.csv
 data/bus_tech_df.csv
 data/comp_sum_df.csv
 data/slbo.csv
+highest_avg_pay_Owner Gender.html
+highest_avg_pay_Owner Race.html
+highest_avg_pay_Race.html
