--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ data/slbo.csv
 data/comp_sum_natl_df.csv
 pop_tech.png
 jeds_visualizations.ipynb
+Marjea's_Visuals.ipynb
+jake_working_copy.ipynb
+RyanVisuals.ipynb
