--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ jeds_visualizations.ipynb
 Marjea's_Visuals.ipynb
 jake_working_copy.ipynb
 RyanVisuals.ipynb
+visuals/company_pay_maps.html
+visuals/stacked_reasons.html
